--- a/curso POO uber/JS/index.html
+++ b/curso POO uber/JS/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Programación Orientada a Objetos en JavaScript</h1>
-    <script src="./Account.js"></script>
-    <script src="./Car.js"></script>
-    <script src="./Index.js"></script>
+    <script src="Account.js"></script>
+    <script src="Car.js"></script>
+    <script src="UberX.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
